logs/watchdog_20251013_0000.log
[13/10/2025  0:00:01,68] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  0:00:01,98] END WATCHDOG 
